--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/timegrid": "^5.11.3",
     "@fullcalendar/vue": "5.11.3",
     "@tweenjs/tween.js": "18.6.4",
+    "axios": "^1.5.1",
     "chartist": "0.11.4",
     "es6-promise": "4.2.8",
     "fuse.js": "6.6.2",
@@ -29,6 +30,7 @@
     "sweetalert2": "^11.6.13",
     "vee-validate": "3.4.10",
     "vue": "2.6.14",
+    "vue-axios": "^3.5.2",
     "vue-clickaway": "2.2.2",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "3.5.2",
